This file documents the revision history for UFL::Phonebook.

0.37
        - Add mappings of affiliation codes for display

0.36  Wed Jun  2 16:07:17 EDT 2010
        - Add request throttling to BaseController (#95)
        - Update authentication to make better use of Shibboleth

0.35  Fri Mar  5 09:47:00 EST 2010
        - Update to latest version of Catalyst scripts
        - Make default font size more normal
        - Explicitly set a default KRB5CCNAME for the application to
          avoid conflicts with the Kerberos default
        - Refactor common CSS to a separate file to have defaults
          apply better
        - Add an about page
        - Add search box to all pages but the home page

0.34  Wed Aug 12 14:51:22 EDT 2009
        - Remove sessions for authentication so that users don't
          appear logged in to the public instance
        - Add Google Analytics

0.33  Mon Aug 10 16:35:11 EDT 2009
        - Switch to shared location for search behavior scripts

0.32  Thu Aug  6 17:48:20 EDT 2009
        - Fix vCard downloads for people who don't have fields like
          'uid' (#50)
        - Improve name sorting to use surname and given name instead
          of relying on the common name, due to inconstencies in
          e.g. "Richards,Paul Joseph" and "Paul Richards" (#52)

0.31  Wed Aug  5 17:23:14 EDT 2009
        - Switch from ugly UFL::Controller::Authentication to
          Catalyst::Authentication::Credential::Remote
        - Move automatic authentication to
          UFL::Phonebook::Controller::Root/auto (CONFIGURATION CHANGE)
        - Switch from Class::C3 to MRO::Compat for Perl 5.10
          compatibility
        - Point majority of searches at ldap.ufl.edu (CONFIGURATION
          CHANGE, #5)

0.30  Sat Mar  7 16:17:42 EST 2009
        - Update list of directories
        - Switch to dir8.osg.ufl.edu at Allen Rout's request

0.29  Fri Oct  3 16:02:54 EDT 2008
        - Hide employeeNumber for student-student interactions (#26)
