@@ -1,0 +1,7 @@
+[% SET
+   title = 'Request Environment'
+-%]
+
+<div class="about">
+[% INCLUDE includes/env.tt %]
+</div><!-- .about -->
