@@ -1,0 +1,21 @@
+[% DEFAULT env = c.engine.env %]
+<h3>Request Environment</h3>
+<p>Below is the raw information sent via the server environment. You may be asked to provide values from this table for support.</p>
+<table>
+  <thead>
+    <tr>
+      <th scope="col">Key</th>
+      <th scope="col">Value</th>
+    </tr>
+  </thead>
+  <tbody>
+[% SET odd = 1 %]
+[% FOREACH key IN env.keys.sort %]
+    <tr[% IF odd %] class="odd"[% END %]>
+      <th scope="row">[% key | html %]</th>
+      <td><div class="env">[% env.$key || '-' | html %]</div></td>
+    </tr>
+  [% SET odd = !odd %]
+[% END %]
+  </tbody>
+</table>
